Fixed issue on iPhone and iPad

--- a/compass/dev/_styles.scss
+++ b/compass/dev/_styles.scss
@@ -246,6 +246,7 @@ p{
 		}
 		text-decoration: none;
 		overflow:hidden;
+		white-space: nowrap;
 		@include transition(background-color 0.2s ease-out, color 0.2s ease-out, background-position 0.2s ease-out);
 		@include icon-background();
 
