--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1321,6 +1321,7 @@ p {
   width: 30%;
   text-decoration: none;
   overflow: hidden;
+  white-space: nowrap;
   -moz-transition: background-color 0.2s ease-out, color 0.2s ease-out, background-position 0.2s ease-out;
   -o-transition: background-color 0.2s ease-out, color 0.2s ease-out, background-position 0.2s ease-out;
   -webkit-transition: background-color 0.2s ease-out, color 0.2s ease-out, background-position 0.2s ease-out;
